DM's comments added to all chapters; safe copy before extensive rewrites

--- a/chap1.tex
+++ b/chap1.tex
@@ -59,8 +59,7 @@ and difficult to pin down in general. But specifically regarding the ways that
 driverless cars are figured in the press as autonomous
 machines---that the only image of the technology that bears
 investigation is that of fully self-driving vehicles, an imagined
-technological peak---a number of identifiable sources for these ideological slants and
-modes of rhetoric exist: science fiction, factory automation history,
+technological peak---: science fiction, factory automation history,
 artificial intelligence, and current engineering and policy documents. Some of
 these sources themselves have more direct impacts, such as
 policy documents that stand to shape the way state legislation proceeds. Each,
@@ -166,25 +165,31 @@ it about time?'' This hype-mindset fits the business
 goals of many news outlets interested primarily in page-views.
 
 The few historically-specific 
-dreams\footnote{Rarely mentioned are other contemporary research
+dreams that do filter through into the narratives of autonomous
+technology \cite{CBSPetersen} 
+include the 1939 World's Fair, discussed
+in the introduction, at which auto companies
+previewed a city of the future. Its centerpiece, GM's Futurama
+exhibit, presented a bird's-eye view of a future city with multi-lane elevated
+expressways filled with largely automated vehicles. GM's Firebird concepts
+from the 1950s\footnote{Rarely mentioned are other contemporary research
   initiatives, such as the work of
   Vladimir Zworykin at RCA. His 
   concept, inspired by ``railroad block signals,'' used circuits
   embedded in the road to magnetically sense vehicle speed and
   location. GM's working test system based on their ``Unicontrol''
   joystick instead located much of the sensing and control within the car
-itself \cite[p. 8]{wetmore}. But this work too is not often remembered.} that do filter through into the narratives of autonomous
-technology \cite{CBSPetersen} include the 1939 World's Fair, discussed
-in the introduction, at which auto companies
-previewed a city of the future. Its centerpiece, GM's Futurama
-exhibit, presented a bird's-eye view of a future city with multi-lane elevated
-expressways filled with largely automated vehicles. GM's Firebird concepts
-from the 1950s are also occasionally remembered due to their publicity and
+itself \cite[p. 8]{wetmore}. But this work too is not often
+remembered.} are also occasionally remembered due to their publicity
+and 
 subsequent cultural presence, \cite{walshVs} despite that the vehicles actually
 contained no autonomous technology \cite[p. 7]{wetmore}. They were
-themselves engineering fictions. 
+themselves engineering fictions. DARPA's investments in automated
+driving are recalled more frequently, but largely stripped of their
+military valences and instead seen as the start of a vibrant civilian
+automated car project \cite{economistSR}.
 
-These fictions are powerful because in their projections into the
+These historical moments are powerful because in their projections into the
 popular discourse, they cease to answer to logic and
 sense. They draw upon emotions, hopes, and aspirations. Driverless cars
 are in part works of theater, objects of technological spectacle which
@@ -277,10 +282,14 @@ roadway.\footnote{Speaking at The Road Ahead Conference, hosted by
 intersection, and would be instructed to proceed according to the
 orchestrations of a central control system---a fruition of
 Vladimir Zworykin's work at RCA from the 1950s. Singapore is engaging in
-controlled vehicle tests to work on just such ideas, to improve car
-sharing with vehicle-to-vehicle communications and predictive traffic
+controlled vehicle tests to work on just such ideas, to improve
+efficiency with vehicle-to-vehicle communications and predictive traffic
 patterns.\footnote{Lam Wee Shan, speaking at The Road Ahead Conference, hosted by
-  the MIT SENSEable City Lab, Cambridge MA, November 21, 2014.} As we
+  the MIT SENSEable City Lab, Cambridge MA, November 21, 2014.
+  Singapore seems to have a unique position in shaping this research,
+  due to its small size, high population density, existing vehicle
+  restrictions, and willingness to 
+  leverage itself as a technology test-bed.} As we
 might expect, these
 design concepts and stories have telling connections to each other, and
 to a web of other fictions, meshing well with the automated vehicle
@@ -312,8 +321,8 @@ at least the one that's been proven, through research, is pricing, is
 through taxation.''
 
 Nevertheless, these
-sorts of envisioned futures support a get-out-of-the-way rhetoric
-among their supporters. As another suggested to me in an interview:
+sorts of envisioned futures support a get-out-of-the-way rhetoric. As
+one researcher suggested to me in an interview:
 ``privacy-nuts'' and ``soccer-moms'' will be disturbed by the
 technology, but we should press forward anyway. Such dismissive and
 derisive categorizations, applied nonchalantly, suggest that anyone
@@ -486,7 +495,7 @@ machines---even the Evans Mill\footnote{Evans cited a reduction in
 rhetoric that the 
 machines themselves require no bed or board. At the same time, Coxe's
 use of the word ``endowed'' should focus our attention on exactly which
-of the ``talents'' of the inventors have been automatized, and the human
+``talents'' of the inventors have been automatized, and the human
 labor necessarily involved in that conferring of capabilities. 
 
 Robotic cars are sometimes situated as
@@ -609,9 +618,9 @@ one of the fundamental and enduring characteristics of Taylor's
 system, the expansion of management roles and the further division of
 labor, is not about mechanical automation but about new and altered
 types of human work. Industrial processes in the early 1900s continued
-the removal of management and strategic decision making from the
+the removal of strategic decision making from the
 workers most physically engaged in product production, installing it
-instead within formal organizational structures and the employees that
+instead within formal organizational structures and the managers that
 constituted them. 
 
 This pattern of delayed recognition and contingent change repeats for
@@ -1170,7 +1179,8 @@ ambivalences.\footnote{Ekbia's book does an excellent job
   exploring and cataloging many of these, more than I have space for.
   The logical and neorobotic approaches appear most relevant as
   broad-strokes historical precursors for inclusion here. But the rest
-of his book is worth reading for more detail on other schools of AI thought.} Ideas fade
+of his book is worth reading for more detail on other schools of AI
+thought.} Ideas fade 
 and resurface as fashions change, and greater computational power
 allows ``failed'' techniques to be tried anew. But much of this
 history is presently unappreciated outside of the discipline. What the
@@ -1186,9 +1196,22 @@ emulate human learning,\footnote{Speaking at the CAST Symposium at
   actually stepping away from ``Big Data'' and AI approaches applied
   by Google, among others.} other researchers bootstrap their machines
 with more fully-formed models. Ours is the age of
-statistical AI, and that is what receives attention in the
-self-driving car narrative: the new source
-of bootstrapping information is data, ``Big'' and ``small.'' Today's
+statistical, probabilistic AI, lead in the robotics space by Sebastian
+Thrun, Wolfram Burgard, and Dieter Fox with their book
+\emph{Probabilistic Robotics}.\footnote{The book begins with a nod to
+  the self-driving car project: ``Wouldn't it be great if all our cars
+were able to safely steer themselves, making car accidents a notion of
+the past?'' Utopian vision of technological possibility are not
+limited to press accounts \cite[p. 3]{thrunProb}.} This research,
+organized around a variety of algorithms based on Bayes rule,
+distinguishes itself from prior model-based (logical) or ``reactive
+behavior-based'' (subsumption) approaches by dealing gracefully with
+uncertainties in both the world model and sensor inputs \cite[p.
+  9]{thrunProb}. But despite that probabilistic robotics fundamentally
+underlies the major automated vehicle innovations reported by the
+popular press, it is rarely, if ever, mentioned. What receives attention in the
+self-driving car narrative is a different gloss on the probabilistic
+system: today's
 AI buzzword seems to be ``deep learning,'' which appears to yield
 radical new possibilities everywhere it is 
 applied---though it really just means a return of neural
@@ -1198,7 +1221,8 @@ networks,\footnote{These systems still have little or nothing to do
   press.} which, armed with some improvements in weight generation,
 more layers of
 nodes, and more data to train with, have been able to eclipse many of
-the previous techniques.
+the previous techniques. The new source 
+of bootstrapping information is data, ``Big'' and ``small.''
 
 %%EDIT: this could all use some clarity
 
@@ -1218,7 +1242,10 @@ inputs. This tuning,
 traditionally, has been done using supervised method and
 backpropagation of errors: the output result is compared to an
 expected classification result, and the error used to tune the weights
-more appropriately. Deep learning extends this technique, decreasing
+more appropriately. These techniques are actually used in the
+probabilistic robotics field, to train learning algorithms to develop
+maps out of noisy sensor data \cite[p. 284-297]{thrunProb}. Deep
+learning extends this technique, decreasing 
 the amount of ``feature-engineering'' (a human task, identifying the
 features the network should use to distinguish inputs) required to
 train the system. The ``ideal'' training situation is entirely
@@ -1280,13 +1307,26 @@ state-of-the-art image recognition is still considerably less capable
 than people are, many articles still present the uncritical idea that we have solved
 the image-recognition problem---or rather, that increases in computing
 power mean it will necessarily soon be solved. By this narrative, seemingly limitless
-possibilities are open before us. As one should expect, the real
-history is far more nuanced. We would do well to remember that
+possibilities are open before us: a new universal problem solver, like
+feedback control before it, seems to have broadened the frontiers
+of the future. As one should expect, the real
+history of artificial intelligence and robotics is far more nuanced.
+We would do well to remember that 
 progress has been slow, contingent, and heterogeneous, a product of a
-wide variety of concepts and techniques. But
-this is the environment that autonomous cars, as a
+wide variety of concepts and techniques. Logical, precise models,
+reactive-subsumptive control, and probabilistic re-framings of the
+navigation problem all had their parts to play in this evolution. And
+it is difficult to argue with techniques that ``work,'' which
+statistical AI certainly does in the sense that it has been able to
+spawn numerous real-world systems, from personal assistants to
+self-driving test vehicles, that exceeded that which was possible with
+prior approaches. However, the limits of each new paradigm are rarely
+obvious \emph{a priori}, and it remains to be seen how far current
+algorithms can carry the field, and whether subsequent algorithmic
+advances will allow progress to continue unabated. This is the
+environment that autonomous cars, as a 
 research area of artificial intelligence, find themselves in today:
-part of a new surge (bubble?) of interest in the field, driven by new
+part of a new surge (or bubble) of interest in the field, driven by new
 or newly extended techniques. The search continues for Winston's
 philosopher's stone.
 
