--- a/chap3.tex
+++ b/chap3.tex
@@ -209,7 +209,7 @@ rhetorically at least, less impressive \cite[p. 90]{DM}. This reading was
 supported some years later in 1963 by the flight of Valentina
 Tereshkova, the 
 first woman in space (a milestone not followed by the United States
-until the 1970s). This automated approach perhaps fit a ``communist ethos,'' sending
+until the 1980s). This automated approach perhaps fit a ``communist ethos,'' sending
 the representatives of every-man and every-woman into
 space,\footnote{Neither Gargarin nor Tereshkova had aristocratic
   family backgrounds.} but did
@@ -305,7 +305,7 @@ a triumph of manual control, aided of course by automated read-outs.
 %cites removed
 % missions actually flew\cite[p. 93]{DM}
 The Apollo program started too soon to learn the lessons of
-Gemini---the Apollo system design was complete by the time Gemini
+Gemini---the Apollo system design was largely complete by the time Gemini
 missions actually flew---but despite the
 ultimately high levels of automation present with the Apollo
 spacecraft, arguments about human role shaped development on this
@@ -492,7 +492,9 @@ instrument fail on the first day and not know about it for weeks. So
 instead of long, autonomous missions, most operations involve many
 shorter missions with acoustic links coupling the device with
 shipboard researchers.\footnote{David Mindell, discussion with the
-  author, September 3, 2014} While self-driving cars would not
+  author, September 3, 2014} 
+
+While self-driving cars would not
 be much like Mars rovers or underwater robots, telerobotic exploration
 provides potential lessons
 to be learned in terms of human and machine roles, and the level of
@@ -597,13 +599,7 @@ constant control inputs to maintain course---goes back as far as the
 Wright Flyer, as do the competing professional identities that
 accompany them: are you simply a chauffeur, or a ``true
 airman'' \cite[p. 21]{DM}? The Wright's focus on the operator's
-skill\footnote{The navigation of human and automated capabilities in
-  high-performance racing also deserves proper investigation. But I suspect
-similar issues play out in this arena: modern racing cars depend on
-much accumulated engineering expertise, but racing is as much about
-the drivers as the cars and so inventiveness is often tempered by
-rules that disallow certain technologies:  ABS and traction control are
-banned from Formula 1 racing, for example.} created the unique profession of the
+skill created the unique profession of the
 ``pilot,'' and unstable aircraft were the standard for years, until
 human fatigue over long periods of flight changed the importance of
 stability to aircraft operation \cite[p. 22-24]{DM}. Stability,
@@ -620,7 +616,9 @@ than using automation to assume control \cite[p. 35]{DM}.
 Nevertheless, cockpit automation has continued to increase. Today,
 many airlines 
 have guidelines that require automation systems to be used
-whenever possible \cite[p. 38]{PARCCAST}. This parallels some developments
+whenever possible \cite[p. 38]{PARCCAST}. 
+
+This airborne experience with stability and automation parallels some developments
 in the automotive space: deep controversies exist among automotive
 enthusiasts about the proper roles of all-wheel-drive, traction
 control, and automatic transmissions in the driving process. Even ABS,
@@ -634,7 +632,21 @@ computerized system.\footnote{There are innumerable forum posts on
   physical principles and the capabilities of the technology in
   different road conditions are
   intertwined with issues of masculinity and implicit driving skill.}
-New performance vehicles---like the 
+Human and automated capabilities take on a special role in
+  high-performance racing, which, despite the technology, puts the
+  human being at the center. Modern racing cars depend on
+much accumulated engineering expertise, but racing is as much about
+the drivers as the cars and so inventiveness is often tempered by
+rules that disallow certain technologies:  ABS and traction control are
+banned from Formula 1 racing, for example. As Carlos Martinez-Vela
+describes, regarding NASCAR: ``as important as engineering science has
+become . . . given
+that every team runs virtually the same technology, what makes a
+difference in performance is the 'human element.''' The human is the ``only data acquisition
+system'' allowed at the track, and the abilities of human beings to
+sense and describe performance characteristics, and to work together
+as a team, are paramount in this community \cite[p.
+  178]{martinezvela}. New consumer performance vehicles---like the 
 highly computerized Nissan GT-R, with a plethora of all-wheel-drive
 systems---are criticized by some as ``too easy to drive quickly'' \cite{edmunds}.
 An overly computerized vehicle is to some soulless, unexciting, too much like
