--- a/concl.tex
+++ b/concl.tex
@@ -333,13 +333,15 @@ computational artifacts than that our language for talking about
 agency, whether for persons or artifacts, presupposes a field of
 discrete, self-standing entities'' \cite[p. 263]{SuchmanPlans}.
 Instead, we should be asking how intelligent behavior emerges in
-the interactions of 
-humans and machines, refusing to fix \emph{a priori} the category of
+the interactions of
+humans and machines---involving networked, rather than individual,
+subjectivities---refusing to fix \emph{a priori} the category of 
 the human. Automated vehicles are a product of AI, and are vulnerable
 to the same critique. 
 
 New epistemologies, involving perhaps a broader recognition of our
-cyborg nature,  may be
+networked, 
+cyborg nature, may be
 necessary at multiple levels. At the level of the individual, what is
 the role or status of the human, and that of the machine? How do we
 classify and make sense of users and devices, and their
