--- a/intro.tex
+++ b/intro.tex
@@ -186,7 +186,9 @@ But radio was not the only revolutionary medium to be included in
  eye automobile'' which would steer itself via a control loop, using an
  array of ``electric eyes,'' or photocells, on the car to track a light
  beam projected from the car and reflected by mirrors in the road
- surface. As the article, titled ``Light Beams Steer Super Racing
+ surface.\footnote{Intriguingly, this simple application has become
+   one of the classic robotics teaching experiments. I remember
+   building similar robots in high school robotics club.} As the article, titled ``Light Beams Steer Super Racing
  Cars,'' describes:
 \begin{quote}
 With speeds, such as recently attained by the famous Sir Malcom
@@ -214,7 +216,9 @@ the track. The photocells within the vehicle's sensing mechanism would
 operate relays controlling the steering linkage, closing the loop
 between sensing and acting in the manner of a ``teleological''
 \cite{behaviorPurpose}, 
-self-governing mechanism with corrective feedback. But how
+self-governing mechanism with corrective feedback:  the simple
+idea of feedback control opens a vast array of new potentialities for
+the future. But how 
 the car's governor could be modified to allow it to race with or
 beside other cars is not mentioned, which is telling since it is the
 complexities of the road environment that make automated driving so difficult.
@@ -357,13 +361,21 @@ to react to our senses and stop the car which we are driving, it may
 already have run head on into a wall,'' he wrote, and the answer to
 this problem was the lightning speed of cybernetic control \cite{wienerOn}. But real
 developments in automated driving did not materialize, and research
-languished throughout the late 1960s and 1970s \cite[p. 10]{wetmore}.
+languished, out of the public eye, throughout the late 1960s and 1970s
+\cite[p. 10]{wetmore}.
 
 \subsection{Research at the Turn of the Century}
 
 %% FOOTNOTE the acronyms
 
-In contrast to earlier radio or track-based electrical control, the
+Not all vehicle research focused on cars themselves, and active
+efforts to design and develop intelligent vehicle-highway systems (IVHS) occurred
+in the United States and elsewhere during the 1980s and 1990s \cite[p.
+  11-12]{wetmore}. These
+efforts focused primarily on ``nearer term'' technologies, such as
+electronic tolls and driver information systems\footnote{411}, located
+outside the vehicle. In contrast to earlier radio or track-based
+electrical control, which similarly involved infrastructural changes, the 
 ``modern'' era of self-driving vehicle research begins with
 computer-vision based approaches. While computer vision techniques had
 been experimented with for vehicle guidance since 1969, it was not
@@ -414,8 +426,8 @@ successful conclusion in 1994 and 1995 with 1000 kilometers of largely
 autonomous operation in normal traffic conditions on Paris motorways,
 as well as a finale drive from Munich to Copenhagen \cite{makingBertha}.
 Meanwhile, vision-based research also occurred actively in the United States;
-Congress passed the Intermodal 
-Surface Transportation Efficiency Act in 1991, which allowed for \$650 million
+Congress' passing of the Intermodal 
+Surface Transportation Efficiency Act in 1991 allowed for \$650 million
 in funding for driverless vehicle research over the following six
 years
 \cite{novakAlmost}.\footnote{Novak suggests that the biggest problem with
@@ -423,7 +435,12 @@ the legislation was that it failed to define what a ``fully automated
 highway system'' would be, such that it could be achieved in the time
 allotted \cite{novakAlmost}. This is an important consideration for
 future work.} The act spurred a consortium of nine organizations to
-work on meeting the 1997 deadline for demonstrations.
+work on meeting the 1997 deadline for demonstrations. In contrast to
+IVHS, which was seen as fundamentally limited by the human driver,
+this automated driving effort promised computationally-driven
+improvements in safety and environmental impact, as Rodney Slater of
+the Federal Highway Administration described in a 1993 announcement
+\cite[p. 30]{wetmore}.
 Notably, a Congressional report described the goal as ``hands-off,
 feet-off'' driving \cite{novakAlmost}, language which returns in the NHTSA's recent
 \emph{Preliminary Statement of Policy Concerning Automated Vehicles}
@@ -441,10 +458,17 @@ and proves similarly unhelpful, as will be described in chapter
 
 Further autonomous vehicle research has progressed incrementally from
 these vision-based beginnings. The
-DARPA Grand Challenge in 2004 and 2005, and the DARPA Urban Challenge
+DARPA Grand Challenge in 2004 and 2005 (evolving from the
+  DARPA Strategic Computing project, discussed in chapter
+  \ref{chap:1}), and the DARPA Urban Challenge 
 in 2007, spurred significant interest, and brought together industry
 groups and universities to 
-try to extend the capabilities of fully autonomous vehicles. While the
+try to extend the capabilities of fully autonomous vehicles. The
+military should not be discounted as a contributor to and funder of
+  this research, and military visions of automated vehicles---as a way
+  to remove human soldiers and transport drivers from harm's way---are
+  sources of inspiration that deserve fuller
+  exploration elsewhere. While the
 Grand Challenge technologies bear little resemblance to current
 navigation approaches designed to deal with the complexities of
 real-world road environments,\footnote{These vehicles basically
@@ -753,7 +777,20 @@ entirely. So what follows is a patchwork, though, I hope, an artful
 one.} Different technological possibilities produce several visions of
 what society might be, but each will ultimately have to come into
 contact not only with physical reality, but the social realms of law,
-technology, and public acceptance. Rather than taking the visions as
+technology, and public acceptance. My research materials have
+therefore consisted not only of public media portrayals of automated
+vehicle efforts---comprising hundreds of news articles accessed
+between March 2014 and April 2015---but also other public
+documentation including patents, research papers in robotics,
+computer science, law, and ethics, and books on computers, automation systems,
+and their human 
+interrelationships. I attended three information-technology or urban-planning
+related conferences at MIT to examine the presentation of automated
+vehicles within technical communities. I have also conducted a handful
+of one-hour interviews with 
+automated vehicle and transport researchers to attempt to gain
+internal perspective on their concerns and motivations. Rather than
+taking the visions as 
 my starting point, I have had to dig deeper: putting these visions in the context of
 historical fields and precedents, and shining light through their
 gaps. And that is what I hope this project has become, a 
