one little wording change

--- a/concl.tex
+++ b/concl.tex
@@ -339,7 +339,7 @@ subjectivities---refusing to fix \emph{a priori} the category of
 the human. Automated vehicles are a product of AI, and are vulnerable
 to the same critique. 
 
-New epistemologies, involving perhaps a broader recognition of our
+New epistemologies, involving a broader recognition of our
 networked, 
 cyborg nature, may be
 necessary at multiple levels. At the level of the individual, what is
