added SC to bib

--- a/chap1.tex
+++ b/chap1.tex
@@ -997,7 +997,7 @@ area, with ``image understanding'' and interpretation---made possible by
 the digitized image---as long range project goals. In its revised
 10-year plan, the initiative even included an autonomous land vehicle,
 alongside a pilot's associate, and computerized battle management
-software. The project suffered serious management problems, and
+software \cite{rolandShiman}. The project suffered serious management problems, and
 was eventually canceled, precipitating the general crash in AI
 funding---through which research quietly continued, waiting for another
 up-tick in public interest. But the Strategic Computing project,
