--- a/main.bib
+++ b/main.bib
@@ -2113,6 +2113,14 @@
    note = "http://www.economist.com/news/special-report/21576224-one-day-every-car-may-come-invisible-chauffeur-look-no-hands/",
 }
 
+@BOOK{rolandShiman,
+   author = "Alex Roland and Philip Shiman",
+   title = "{S}trategic {C}omputing: {DARPA} and the {Q}uest for {M}achine {I}ntelligence, 1983--1993",
+   publisher = "MIT Press",
+   address = "Cambridge, MA",
+   year = "2002",
+}
+
 
 
 
